--- a/package.json
+++ b/package.json
@@ -8,20 +8,29 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build && electron-builder"
+    "build": "vite build && electron-builder"
   },
   "engines": {
     "node": ">=14.17.0"
   },
   "devDependencies": {
+    "@headlessui/vue": "^1.6.5",
+    "@heroicons/vue": "^1.0.6",
+    "@tailwindcss/forms": "^0.5.2",
     "@vitejs/plugin-vue": "^2.3.3",
+    "autoprefixer": "^10.4.7",
     "electron": "^19.0.3",
     "electron-builder": "^23.0.3",
+    "jdenticon": "^3.1.1",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.4",
     "typescript": "^4.7.3",
     "vite": "^2.9.9",
     "vite-plugin-electron": "^0.6.0",
     "vite-plugin-resolve": "^2.1.2",
     "vue": "^3.2.36",
+    "vue-router": "^4.0.16",
     "vue-tsc": "^0.36.0"
   },
   "env": {
