Initial single minting and IPFS upload

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -2,7 +2,8 @@
  * @see https://www.electron.build/configuration/configuration
  */
 {
-  "appId": "YourAppID",
+  "appId": "io.mintgarden.studiom",
+  productName: "MintGarden Studio",
   "asar": true,
   "directories": {
     "output": "release/${version}"
