--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/forms": "^0.5.2",
     "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
+    "bech32": "^2.0.0",
     "electron": "^19.0.3",
     "electron-builder": "^23.0.3",
     "jdenticon": "^3.1.1",
@@ -46,6 +47,8 @@
     "vue"
   ],
   "dependencies": {
-    "chia-agent": "^6.0.0"
+    "chia-agent": "^6.0.0",
+    "electron-store": "^8.0.2",
+    "greenwebjs": "^1.1.6"
   }
 }
