--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build && electron-builder"
+    "build": "vite build",
+    "package": "electron-builder"
   },
   "engines": {
     "node": ">=14.17.0"
