--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
 
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      VITE_NFT_STORAGE_TOKEN: ${{ secrets.NFT_STORAGE_TOKEN }}
 
     strategy:
       matrix:
