--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
+    "types": ["vite/client"],
     "moduleResolution": "node",
     "importHelpers": true,
     "jsx": "preserve",
@@ -14,7 +15,5 @@
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true
   },
-  "references": [
-    { "path": "./tsconfig.node.json" }
-  ]
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
