Sign macos binary with developer cert
https://github.com/marketplace/actions/electron-builder-action#code-signing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,3 +70,5 @@ jobs:
           args: --config electron-builder.json5
           github_token: ${{ secrets.GITHUB_TOKEN }}
           release: ${{ startsWith(github.ref, 'refs/tags/v') && github.event_name == 'push' && needs.get_metadata.outputs.branch == 'main'}}
+          mac_certs: ${{ secrets.MAC_CERTS }}
+          mac_certs_password: ${{ secrets.MAC_CERTS_PASSWORD }}
