--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/vue": "^1.0.6",
     "@tailwindcss/forms": "^0.5.2",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vueuse/core": "^8.9.4",
     "autoprefixer": "^10.4.7",
     "bech32": "^2.0.0",
     "electron": "^19.0.3",
@@ -48,6 +49,7 @@
     "vue"
   ],
   "dependencies": {
+    "axios": "^0.27.2",
     "chia-agent": "^6.0.0",
     "electron-store": "^8.0.2",
     "greenwebjs": "^1.1.6"
