--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bech32": "^2.0.0",
     "electron": "^19.0.3",
     "electron-builder": "^23.0.3",
+    "electron-builder-notarize": "^1.5.0",
     "jdenticon": "^3.1.1",
     "nft.storage": "^6.3.0",
     "postcss": "^8.4.14",
