Change macOS build target to enable auto updates

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -16,7 +16,7 @@
     "hardenedRuntime": true,
     "artifactName": "${productName}_${version}.${ext}",
     "target": [
-      "dmg"
+      "default"
     ]
   },
   "win": {
